# kv-server

./: Cargo.toml  build.rs
src/: client.rs  lib.rs  server.rs
src/client/: mod.rs
src/protos/proto/: kvserver.proto
src/server/: mod.rs
src/store/: mod.rs
src/store/engine/: log.rs  mod.rs
tests/: test.rs
