[package]
name = "kv-server"
version = "0.1.0"
authors = ["Hiko <johanhu2016@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.3"
protobuf = "~2"

[build-dependencies]
protoc-grpcio = "1.0.2"